# chessreports

./: README  pyproject.toml  setup.cfg
chessreports/: identify.py  prepare_ecf_format.py  prepare_league_format.py  results_database.py  results_ecf.py  results_lite.py  results_ogd.py
chessreports/apsw/: __init__.py  resultsdatabase.py
chessreports/basecore/: database.py  ecfdataimport.py  ecfogddataimport.py  knownnamesds.py  playerfind.py
chessreports/berkeleydb/: resultsdatabase.py
chessreports/chesscalc_legacy/: __init__.py
chessreports/chesscalc_legacy/core/: __init__.py
chessreports/chesscalc_legacy/gui/: __init__.py
chessreports/core/: collationdb.py  configuration.py  constants.py  convertresults.py  filespec.py  importcollation.py  importcollationdb.py  importreports.py  importresults.py  matchteams.py  mergeplayers.py  prepareresults.py  resultsrecord.py  takeoncollation.py  takeoncollationdb.py  takeonreport.py  takeonresults.py  takeonschedule.py  takeonseason.py  workarounds.py
chessreports/core/ecf/: ecfclubdb.py  ecfdataimport.py  ecfmaprecord.py  ecfplayerdb.py  ecfrecord.py  feedback_html.py  players_html.py
chessreports/core/ogd/: __init__.py  ecfgcodemaprecord.py  ecfogddataimport.py  ecfogddb.py  ecfogdrecord.py
chessreports/db/: resultsdatabase.py
chessreports/db_tkinter/: resultsdatabase.py
chessreports/dpt/: __init__.py  resultsdatabase.py
chessreports/gui/: aliaslinkgrids.py  aliaslinkrow.py  configure.py  configuredialog_hack.py  control_database.py  eventgrids.py  eventplayergrids.py  events_database.py  gamesummary.py  help_.py  identities.py  importevents.py  joineventplayers.py  leagues_database.py  newplayers_database.py  playerdetail.py  playergrids.py  players.py  prepare.py  reports.py  resultsroot.py  resultsrow.py  selectemail.py  sourceedit.py  takeonedit.py  tasklog.py  taskpanel.py
chessreports/gui/ecf/: __init__.py  activeclubs.py  control.py  ecfclubcodes.py  ecfdaterow.py  ecfdetail.py  ecfdownload.py  ecferrors.py  ecfeventcopy.py  ecfeventgrids.py  ecfevents.py  ecfgradingcodes.py  ecfmaprow.py  ecfplayergrids.py  ecfplayers.py  ecfrow.py  events.py  feedback.py  feedback_monthly.py  importecfdata.py  leagues.py  newevent.py  newplayers.py  ratedplayers.py  uploadresults.py
chessreports/gui/lite/: __init__.py  control_lite.py  events_lite.py  leagues_lite.py  newplayers_lite.py
chessreports/gui/minorbases/: __init__.py  dbasedatarow.py  textdatarow.py
chessreports/gui/ogd/: __init__.py  control_ogd.py  ecfgcodemaprow.py  ecfogdrow.py  events_ogd.py  importecfogd.py  leagues_ogd.py  newplayers_ogd.py  ogdgradingcodes.py  ogdplayergrids.py
chessreports/help_/: __init__.py
chessreports/lmdb/: __init__.py  resultsdatabase.py
chessreports/minorbases/: bz2textapi.py  csvapi.py  dbaseapi.py  textapi.py  ziptextapi.py
chessreports/samples/: resultsdb.py  resultsdb_lite.py  resultsdb_ogd.py
chessreports/sqlite/: __init__.py  resultsdatabase.py
chessreports/tools/: create_chessreports_database.py  upgrade_3_to_4.py
chessreports/unqlite/: __init__.py  resultsdatabase.py
chessreports/vedis/: __init__.py  resultsdatabase.py
chessresults/: __init__.py  identify.py  prepare_ecf_format.py  prepare_league_format.py  results_database.py  results_ecf.py  results_lite.py  results_ogd.py
chessresults/apsw/: resultsdatabase.py
chessresults/basecore/: database.py  ecfdataimport.py  ecfogddataimport.py  knownnames.py  newidentitydss.py
chessresults/berkeleydb/: __init__.py  resultsdatabase.py
chessresults/core/: __init__.py  collationdb.py  configuration.py  constants.py  convertresults.py  importreports.py  importresults.py  mergeplayers.py  prepareresults.py  resultsrecord.py  takeoncollation.py  takeonreport.py  takeonresults.py  takeonseason.py
chessresults/core/ecf/: __init__.py  feedback_html.py
chessresults/db/: __init__.py  resultsdatabase.py
chessresults/db_tkinter/: __init__.py  resultsdatabase.py
chessresults/dpt/: ecfdataimport.py  knownnamesds.py  newidentitydss.py  resultsdatabase.py
chessresults/gui/: __init__.py  aliaslinkgrids.py  aliaslinkrow.py  configuredialog_hack.py  control_database.py  datarow.py  eventgrids.py  eventplayergrids.py  events_database.py  gamesummary.py  help_.py  identities.py  importevents.py  joineventplayers.py  leagues_database.py  newplayers_database.py  playerdetail.py  playergrids.py  players.py  prepare.py  reports.py  resultsroot.py  resultsrow.py  selectemail.py  sourceedit.py  takeonedit.py  tasklog.py
chessresults/gui/ecf/: activeclubs.py  control.py  ecfclubcodes.py  ecfdaterow.py  ecfdetail.py  ecfdownload.py  ecferrors.py  ecfeventgrids.py  ecfevents.py  ecfgradingcodes.py  ecfmaprow.py  ecfplayergrids.py  ecfplayers.py  ecfrow.py  feedback.py  feedback_monthly.py  importecfdata.py  leagues.py  newevent.py  newplayers.py  ratedplayers.py  uploadresults.py
chessresults/gui/lite/: events_lite.py  leagues_lite.py  newplayers_lite.py
chessresults/gui/minorbases/: dbasedatarow.py  textdatarow.py
chessresults/gui/ogd/: control_ogd.py  ecfgcodemaprow.py  ecfogdrow.py  events_ogd.py  importecfogd.py  leagues_ogd.py  ogdgradingcodes.py  ogdplayergrids.py
chessresults/lmdb/: resultsdatabase.py
chessresults/minorbases/: __init__.py  csvapi.py  dbaseapi.py  textapi.py
chessresults/samples/: resultsdb.py  resultsdb_lite.py  resultsdb_ogd.py
chessresults/sqlite/: resultsdatabase.py
chessresults/tools/: create_chessresults_database.py  results_sqlite_table_name_upgrade.py  upgrade_3_to_4.py
chessresults/unqlite/: resultsdatabase.py
chessresults/vedis/: resultsdatabase.py
