[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[project]
name = "chessreports"
version = "7.1.9.dev0"
authors = [
  { name="Roger Marsh", email="roger.marsh@solentware.co.uk" },
]
description = "Results database for chess games."
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Board Games",
    "Intended Audience :: End Users/Desktop",
    "Development Status :: 3 - Alpha",
]
license = {file = "LICENCE"}
readme = "README"
dependencies = [
    "chesscalc==2.0.3.dev0",
    "chessvalidate==2.0.5",
    "solentware-base==5.2.3.dev3",
    "solentware-grid==3.0.1",
]

[project.urls]
Homepage = "http://www.solentware.co.uk"
Repository = "https://github.com/RogerMarsh/chessresults.git"
"Bug Tracker" = "https://github.com/RogerMarsh/chessresults/issues"

[tool.setuptools]
packages = [
    "chessreports",
    "chessreports.core",
    "chessreports.core.ecf",
    "chessreports.core.ogd",
    "chessreports.help_",
    "chessreports.basecore",
    "chessreports.minorbases",
    "chessreports.gui",
    "chessreports.gui.ecf",
    "chessreports.gui.lite",
    "chessreports.gui.ogd",
    "chessreports.gui.minorbases",
    "chessreports.lmdb",
    "chessreports.berkeleydb",
    "chessreports.db",
    "chessreports.db_tkinter",
    "chessreports.dpt",
    "chessreports.sqlite",
    "chessreports.apsw",
    "chessreports.unqlite",
    "chessreports.vedis",
    "chessreports.tools",
]

[tool.setuptools.package-data]
chessreports = ["help_/*.txt"]
