[metadata]
name = chessresults
version = 7.1.dev4
description = Results database for chess games
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Board Games
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    chessresults
    chessresults.core
    chessresults.core.ecf
    chessresults.core.ogd
    chessresults.help_
    chessresults.basecore
    chessresults.minorbases
    chessresults.gui
    chessresults.gui.ecf
    chessresults.gui.lite
    chessresults.gui.ogd
    chessresults.gui.minorbases
    chessresults.lmdb
    chessresults.berkeleydb
    chessresults.db
    chessresults.db_tkinter
    chessresults.dpt
    chessresults.sqlite
    chessresults.apsw
    chessresults.unqlite
    chessresults.vedis
    chessresults.tools
install_requires =
    chessvalidate==2.0.1.dev0
    solentware-base==5.0.dev1
    chesscalc==1.3.3.dev0
    solentware-grid==2.1.9.dev0

[options.package_data]
chessresults.help = *.txt
